# glues

./: .cproject  .hgignore  .hgsigs  .project  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  README.old  ReadMe.md  RegionEventTimes.tsv  RegionEventTimes_euroclim.tsv  VERSION  acinclude.m4  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  configure.in  gcc.sh  grid.sh.in  icc.sh  ifnames.txt  patch.sh  pgi.sh  restart.sh  run-amant.sh  run-euroclim.sh  run-eurolbk.sh  run-eurotsi.sh  run-harapa.sh  run-harappa.sh  run-hg.sh  run-krisen.sh  run-landuse.sh  run-lgm.sh  (+7 more)
config/: Makefile.am  ltmain.sh
data/: Fort2012_etal_americanantiquity_som1.csv  Pinhasi2005_etal_plosbio_som1.csv  Pinhasi2005_etal_plosbio_som1.xls  Turney2007_Brown_qsr_som.csv  biome4out_685_biome.tsv  (+41 more)
doc/: GluesEventModel.wiki  GluesVariables.wiki  Makefile.am  glues.bib  glues.doxygen  journal-macros-short.bib  journal-macros.bib
doc/pangaea/: Makefile.am  climber-vecode-glues-geomorph.txt  climber-vecode-glues.txt  plasim-vecode-glues.txt
examples/setup/685/: EventInDist_001_685.tsv  EventInRad_001_685.tsv  EventInRad_123_685.tsv  EventInRad_124_685.tsv  EventInReg_123_685.tsv  EventInReg_124_685.tsv  EventSeries_001.tsv  EventSeries_123.tsv  EventSeries_124.tsv  Makefile.am  mapping_80_685.dat.len  mapping_80_685.mat  region_climber_gdd_685.tsv  region_climber_gdd_685_23.tsv  region_climber_npp_685.tsv  region_climber_npp_685_12.tsv  region_iiasa_gdd_685.tsv  region_iiasaclimber_kai_gdd_685.tsv  region_iiasaclimber_kai_gdd_685_12.tsv  region_iiasaclimber_kai_npp_685_01.tsv  region_names.tsv
src/: AsciiTable.cc  AsciiTable.h  Coast.h  Constants.h  Continent.cc  Continent.h  CulturePopulation.cc  CulturePopulation.h  CultureRegion.cc  CultureRegion.h  Data.h  DomesticationFractionTrait.cc  DomesticationFractionTrait.h  EffectiveVariable.cc  EffectiveVariable.h  Events.cc  Events.h  Exchange.cc  Exchange.h  FarmingQuotaTrait.cc  FarmingQuotaTrait.h  Fileio.cc  GNetcdf.cc  GNetcdf.h  GeoMapping.h  GeoNeighbour.cc  GeoNeighbour.h  GeoRegion.cc  GeoRegion.h  GeographicalNeighbour.cc  GeographicalNeighbour.h  GeographicalRegion.cc  GeographicalRegion.h  GeographicalWorld.cc  GeographicalWorld.h  GlobalClimate.cc  GlobalClimate.h  Globals.cc  Globals.h  Glues.cc  (+43 more)
src/patch/: Makefile.am  Makefile.empty
src/region/: Makefile.am  attach.c  defines.h  gbinary.c  input.c  random.h  reg_eval.c  region.c  utils.c  vars.h
src/sisi/: BUGS  ChangeLog  HISTORY  LICENSE  MANIFEST  Makefile.am  README  TODO  VERSION  bootstrap  configure  configure.ac  makefile
src/sisi/control/: cygwin32.ctl  darwin-x64.ctl  linux-gnu.ctl  solaris2.5.ctl
src/sisi/include/: Makefile.am  Version.hh  cppinc.h  platform.hh
src/sisi/include/common/: CharacterHandler.hh  ClassObject.hh  FilenameHandling.hh  StringHandler.hh  date.hh
src/sisi/include/datastructures/: ArrayParameter.hh  BooleanParameter.hh  CharParameter.hh  CommentParameter.hh  FloatParameter.hh  InfoType.hh  IntParameter.hh  ListParameter.hh  Parameter.hh  ParameterType.hh  ResultParameter.hh  String.hh  StringParameter.hh  TableParameter.hh
src/sisi/include/development/: EmitCxxCode.hh  LogFile.hh  MessageHandler.hh  OutputStream.hh  ResultElement.hh  ResultReader.hh  ResultWriter.hh  SiSi.hh
src/sisi/include/iostreams/: FileParser.hh  Makefile.am  SiSiParser.hh
src/sisi/include/math/: Math.hh  Random.hh  Round.hh
src/sisi/include/memory/: ArrayChecker.hh  MemoryHandler.hh
src/sisi/include/tree/: Node.hh  Tree.hh
src/sisi/include/twowaylist/: TwoWayList.hh  TwoWayListElement.hh  TwoWayListFloatElement.hh  TwoWayListIntElement.hh  TwoWayListStringElement.hh
src/sisi/lib/: Makefile.am
src/sisi/src/: Makefile.am  Version.cc  platform.cc
src/sisi/src/common/: date.cc
src/sisi/src/datastructures/: Makefile.am  Parameter.cc  ParameterType.cc  String.cc
src/sisi/src/development/: EmitCxxCode.cc  MessageHandler.cc  ResultElement.cc  ResultReader.cc  ResultWriter.cc
src/sisi/src/iostreams/: FileParser.cc  Makefile.am  SiSiParser.cc
src/sisi/src/math/: Random.cc
src/test/: Makefile.am  README  SiSiReader.cc  add_reg_geography.cc  compile.sh  create_netcdf_template.cc  create_reg_climate.cc  georegions.tsv  glues_template.cdl  glues_template.nc  nc_add_map.cc  nc_climateregions.cc  nc_create_region_climate.cc  nc_glues.cc  nc_map2regions.cc  nc_pangaea.cc  nc_regionmap.cc  nc_regions.cc  nc_result.cc  nc_util.cc  nc_util.h  nc_write_region_dat.cc  pangaea.sh  print_mapping.cc  reg_climate.nc  reg_geography.nc  sample_netcdf.cc  test_CulturePopulation.cc  test_CultureRegion.cc  test_GeoRegion.cc  test_IO.cc  test_IO.tsv  test_LandRegion.cc  test_Population.cc  test_TechnologyTrait.cc  test_build_maintainer.sh  test_build_tgz.sh  test_cstdlib.cc  test_glues_build.sh  test_glues_distribution.sh  (+2 more)
src/util/: conv_dat.c
src/variation/: Makefile.am  RandomVariation.cc  random_variation.c
src/variations/: random_variation.c
src/vecode/: Makefile.am
visual/matlab/: EventInRad_128_685.tsv  EventInReg_128_685.tsv  EventSeries_128.tsv  GluesVisualisation.wiki  Makefile.am  README  RegionEventTimes_128_685_06.tsv  TODO  add_info_to_proxydescription.m  akp_plasim_timeseries.m  c  calc_cluster2regionmap.m  calc_event_integral.m  calc_event_series.m  calc_geo_mean.m  calc_geogrid.m  calc_gridcell_area.m  calc_map_mesh.m  calc_regionborders.m  calc_regioncoasts.m  calc_regioncolors.m  calc_regionmap_borders.m  calc_regionmap_coasts.m  calc_regionmap_outline.m  calc_regionpath.m  calc_replacemany.m  calc_seas.m  calc_site_summary.m  cl_arvesuperregions.m  cl_bcad.m  cl_calc_cluster.m  cl_calc_deforestation.m  cl_calc_regionpath.m  cl_calc_seas.m  cl_calpal.m  cl_check_nc_neighbours.m  cl_colorbar.m  cl_convert.m  cl_create_regions.m  cl_create_regions_from_grid.m  (+388 more)
visual/matlab/data/: Makefile.am  states.csv  tyn_cru2.0_bycountry_pakistan.txt
visual/matlab/data/datasets/: SO90-39KG-56KA_varve_stack.tsv
visual/matlab/doc/: Makefile.am  glues-visualisation-handbook.tex
visual/matlab/lib/: Makefile.am
(+144 files in other folders)
